adjust version